Actualización de listados

--- a/src/app/components/register/register.html
+++ b/src/app/components/register/register.html
@@ -43,7 +43,15 @@
 
     <button [disabled]="f.invalid">Crear cuenta</button>
   </form>
+  <div class="text-center mt-3">
+    <p>¿Ya tienes cuenta?
+      <a routerLink="/login" style="color:#A67C52; font-weight:600; cursor:pointer;">
+        Inicia sesión aquí
+      </a>
+    </p>
+  </div>
 </div>
+
 <section id="redes-sociales" class="mt-5 py-5">
         <div class="container text-center">
             <h2 class="mb-4" style="color: #A67C52; font-weight: 700;">No te olvides de seguirnos</h2>
